--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,23 @@
 
     <img src="./1.jpg" class="img test" id="img" style="background-color: red;size:12px;" onclick="test" />
     <script>
-        function test() {
-            return (new Promise((resolve, reject) => {
-                reject(false)
-            }))
-        }
         let img = document.getElementById("img")
-        img
+
+        let state = false
+
+        const fn = () => {
+            let len = 100000000
+            for (let index = 0; index < len && state; index++) {
+                if (index === len - 1) {
+                    fn()
+                }
+            }
+        }
+
+        img.onclick = () => {
+            state = !state
+            fn()
+        }
     </script>
 </body>
 
